--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Office Add-in</title>
+    <title>CSV Import+Export</title>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
     <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/9.6.1/css/fabric.min.css">
 </head>
 <body>
-    <noscript>This app requires JavaScript.</noscript>
+    <noscript>CSV Import+Export requires JavaScript.</noscript>
     <div id="root"></div>
 </body>
 </html>
