--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
     <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/9.6.1/css/fabric.min.css">
 </head>
-<body>
+<body style="margin:0">
     <noscript>CSV Import+Export requires JavaScript.</noscript>
     <div id="root"></div>
 </body>
